syntax = "proto3";

package v1.ampbv1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/ampb;ampbv1";

message AnimeMovieRequest {
  string                    originalTitle     = 1;
  google.protobuf.Timestamp aired             = 2;
  int32                     releaseYear       = 3;
  string                    rating            = 4;
  google.protobuf.Duration  duration          = 5;
  string                    portraitPoster    = 6;
  string                    portraitBlurHash  = 7;
  string                    landscapePoster   = 8;
  string                    landscapeBlurHash = 9;
}

message AnimeMovieResponse {
  int64                     ID                = 1;
  string                    originalTitle     = 2;
  string                    uniqueID          = 3;
  google.protobuf.Timestamp aired             = 4;
  int32                     releaseYear       = 5;
  string                    rating            = 6;
  google.protobuf.Duration  duration          = 7;
  string                    portraitPoster    = 8;
  string                    portraitBlurHash  = 9;
  string                    landscapePoster   = 10;
  string                    landscapeBlurHash = 11;
  google.protobuf.Timestamp createdAt         = 12;
}